--- a/react_deployment/package.json
+++ b/react_deployment/package.json
@@ -2,6 +2,7 @@
   "name": "react_complete_guide2023",
   "version": "0.1.0",
   "private": true,
+  "__comment2__": "운영배포 빌드시 아래 주석 해제, build 된 파일을 back-end 소스 아래 경우에 둔다.",
   "__homepage__": "/resources/react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
